Fix internal links

--- a/Researcher perspectives on publication and peer review of data.ipynb
+++ b/Researcher perspectives on publication and peer review of data.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:39339e3f7bb34d6b6d23aaf69f4cf57b1d780aa1850ba736098c0cdbfa883efa"
+  "signature": "sha256:a4e8b4f6fc3ea54f21d263cd7fdd609577d92a83e4fb87955661d3c017cf3d75"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -35,7 +35,7 @@
       "Kratz, JE; Strasser, C (2014) Data from _Researcher perspectives on publication and peer review of data._ UC Office of the President. [doi:10.5060/d8rp4v](https://dash.ucop.edu/xtf/view?docId=ucop/ark%2B%3Db5060%3Dd8rp4v/mrt-datacite.xml;query=kratz)\n",
       "\n",
       "**This notebook:**<br>\n",
-      "Kratz, JE; Strasser, C (2014) Code from _Researcher perspectives on publication and peer review of data._ Zenodo. [doi:10.5281/zenodo.16102](htt)\n",
+      "Kratz, JE; Strasser, C (2014) Code from _Researcher perspectives on publication and peer review of data._ Zenodo. [doi:10.5281/zenodo.16102](http://dx.doi.org/doi:10.5281/zenodo.16102)\n",
       "<hr>"
      ]
     },
@@ -1518,7 +1518,7 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "[Demographics](#Demographics) | [Background knowledge](#background-knowledge) | [Data sharing mechanisms](#data-sharing-mechanisms) | [Credit for sharing data](#credit-for-sharing-data) | [Expected features](#expected-features-of-data-publication-and-peer-review) | [Valued features](#Valued-data-publication-features)"
+      "[Demographics](#Demographics) | [Background knowledge](#Background-knowledge) | [Data sharing mechanisms](#Data-sharing-mechanisms) | [Credit for sharing data](#Credit-for-sharing-data) | [Expected features](#Expected-features-of-data-publication-and-peer-review) | [Valued features](#Valued-data-publication-features)"
      ]
     },
     {
